--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+  flutter_native_splash: ^2.4.0
+  smooth_page_indicator: ^1.1.0
 
 
   #---------Packages End---------------#
@@ -37,3 +39,12 @@ flutter:
     - assets/logos/Screen_1_Splash_Screen/mca_logo.png
     - assets/logos/Screen_1_Splash_Screen/BharatInclusive_Intiative.png
     - assets/logos/Screen_1_Splash_Screen/DPIIT.png
+    - assets/logos/Screen_3_Slider/
+
+  
+
+  fonts:
+    - family: Mulish
+      fonts:
+        - asset: assets/fonts/Mulish-Light.ttf
+        - asset: assets/fonts/Mulish-SemiBold.ttf
