--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.4.0
   smooth_page_indicator: ^1.1.0
+  country_code_picker: ^3.0.0
+  intl_phone_field: ^3.0.0
 
 
   #---------Packages End---------------#
@@ -34,6 +36,7 @@ flutter:
 
   #----------Local Assets ------------------------#
   assets:
+    - assets/logos/
     - assets/logos/Screen_1_Splash_Screen/chitbox_logo.png
     - assets/logos/Screen_1_Splash_Screen/govt_karnataka.png
     - assets/logos/Screen_1_Splash_Screen/mca_logo.png
