--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.6
-  flutter_native_splash: ^2.4.0
+  cupertino_icons: ^1.0.8
   smooth_page_indicator: ^1.1.0
   country_code_picker: ^3.0.0
   intl_phone_field: ^3.0.0
+  intl: ^0.19.0
+  mockito: ^5.4.4
 
 
   #---------Packages End---------------#
