--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   country_code_picker: ^3.0.0
   intl_phone_field: ^3.0.0
   intl: ^0.19.0
+  pin_code_fields: ^7.0.1
   mockito: ^5.4.4
 
 
