--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   intl_phone_field: ^3.0.0
   intl: ^0.19.0
   pin_code_fields: ^7.0.1
-  mockito: ^5.4.4
+  email_validator: ^3.0.0
 
 
   #---------Packages End---------------#
