--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,9 @@ jobs:
         with:
           flutter-version: '3.19.4'
       - run: flutter pub get
-      - run: flutter test
+      - run: flutter test --machine > test_output.log
+
+
       - run: flutter build apk --debug --split-per-abi
       - run: |
           flutter build ios --no-codesign
@@ -36,3 +38,15 @@ jobs:
           artifacts: "build/app/outputs/apk/debug/*,build/ios/iphoneos/app.ipa"
           tag: v0.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
+
+
+      - name: Log test results
+        run: |
+          echo "Running tests..."
+          cat test_output.log
+
+      - name: Save log file
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-log
+          path: test_output.log
