--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   intl_phone_field: ^3.0.0
   intl: ^0.19.0
   pin_code_fields: ^7.0.1
+  logger: ^2.3.0
+  path_provider: ^2.1.3
   email_validator: ^3.0.0
 
 
